--- a/tst/MCB.Core.Domain.Tests/MCB.Core.Domain.Tests.csproj
+++ b/tst/MCB.Core.Domain.Tests/MCB.Core.Domain.Tests.csproj
@@ -8,6 +8,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="MCB.Core.Infra.CrossCutting.DesignPatterns" Version="0.7.0-alpha" />
 		<PackageReference Include="coverlet.msbuild" Version="3.1.2">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
