--- a/src/MCB.Core.Domain/MCB.Core.Domain.csproj
+++ b/src/MCB.Core.Domain/MCB.Core.Domain.csproj
@@ -10,11 +10,12 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="MCB.Core.Domain.Abstractions" Version="0.18.0-alpha" />
+	  <PackageReference Include="MCB.Core.Domain.Abstractions" Version="0.19.0-alpha" />
 	  <PackageReference Include="MCB.Core.Domain.Entities" Version="0.23.0-alpha" />
 	  <PackageReference Include="MCB.Core.Infra.CrossCutting" Version="0.5.0-alpha" />
-	  <PackageReference Include="MCB.Core.Infra.CrossCutting.DesignPatterns" Version="0.12.0-alpha" />
-	  <PackageReference Include="MCB.Core.Infra.CrossCutting.DesignPatterns.Validator" Version="0.13.0-alpha" />
+	  <PackageReference Include="MCB.Core.Infra.CrossCutting.DependencyInjection.Abstractions" Version="0.4.0-alpha" />
+	  <PackageReference Include="MCB.Core.Infra.CrossCutting.DesignPatterns" Version="0.13.0-alpha" />
+	  <PackageReference Include="MCB.Core.Infra.CrossCutting.DesignPatterns.Validator" Version="0.14.0-alpha" />
 	</ItemGroup>
 
 </Project>
