refact: update packages

--- a/.github/workflows/pack-and-publish.yml
+++ b/.github/workflows/pack-and-publish.yml
@@ -28,6 +28,6 @@ jobs:
     - name: Test
       run: dotnet test -c Release --no-build --verbosity normal
     - name: Pack
-      run: dotnet pack -c Release src/MCB.Core.Domain/MCB.Core.Domain.csproj /p:Version='${{ github.event.inputs.version }}'
+      run: dotnet pack -c Release src/MCB.Core.Domain/MCB.Core.Domain.csproj /p:Version='${{ github.event.inputs.version }}' --include-symbols --include-source
     - name: Publish
       run: dotnet nuget push **/*${{ github.event.inputs.version }}.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
