--- a/src/MCB.Core.Domain/MCB.Core.Domain.csproj
+++ b/src/MCB.Core.Domain/MCB.Core.Domain.csproj
@@ -11,7 +11,8 @@
 
 	<ItemGroup>
 	  <PackageReference Include="MCB.Core.Domain.Abstractions" Version="0.23.0-alpha" />
-	  <PackageReference Include="MCB.Core.Domain.Entities" Version="0.33.0-alpha" />
+	  <PackageReference Include="MCB.Core.Domain.Entities.Abstractions" Version="0.26.0-alpha" />
+	  <PackageReference Include="MCB.Core.Infra.CrossCutting.Abstractions" Version="0.5.0-alpha" />
 	  <PackageReference Include="MCB.Core.Infra.CrossCutting.DependencyInjection.Abstractions" Version="0.5.0-alpha" />
 	  <PackageReference Include="MCB.Core.Infra.CrossCutting.DesignPatterns" Version="0.16.0-alpha" />
 	  <PackageReference Include="MCB.Core.Infra.CrossCutting.DesignPatterns.Validator" Version="0.15.0-alpha" />
